правки по ревью наставника

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -100,7 +100,9 @@
           <form action="https://echo.htmlacademy.ru" method="POST">
             <button class="catalog__filter-close" name="filter-close" type="button"></button>
             <fieldset class="accordion__item accordion__item-show accordion__no-js">
-              <p class="accordion__item-header">Product</p>
+              <div class="accordion__item-header catalog__filter-item-header">
+                <p>Product</p>
+              </div>
               <ul class="accordion__item-content">
                 <li>
                   <input class="visually-hidden" type="checkbox" name="Product" id="Necklaces" value="Necklaces"
@@ -122,7 +124,9 @@
               </ul>
             </fieldset>
             <fieldset class="accordion__item accordion__no-js">
-              <p class="accordion__item-header">Material</p>
+              <div class="accordion__item-header catalog__filter-item-header">
+                <p>Material</p>
+              </div>
               <ul class="accordion__item-content">
                 <li>
                   <input class="visually-hidden" type="checkbox" name="Material" id="gold" value="gold">
@@ -135,7 +139,9 @@
               </ul>
             </fieldset>
             <fieldset class="accordion__item accordion__no-js">
-              <p class="accordion__item-header">Collection</p>
+              <div class="accordion__item-header catalog__filter-item-header">
+                <p>Collection</p>
+              </div>
               <ul class="accordion__item-content">
                 <li>
                   <input class="visually-hidden" type="checkbox" name="Collection" id="PinkFlamingo"
@@ -149,7 +155,9 @@
               </ul>
             </fieldset>
             <fieldset class="catalog__filter-cost accordion__item accordion__item-show accordion__no-js">
-              <p class="accordion__item-header">Price</p>
+              <div class="accordion__item-header catalog__filter-item-header">
+                <p>Price</p>
+              </div>
               <div class="catalog__filter-cost-range accordion__item-content">
                 <div class="catalog__filter-cost-range-controls">
                   <div class="catalog__filter-cost-range-controls-scale">
@@ -189,8 +197,12 @@
                     alt="Double pearl earrings" width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Double pearl earrings</p>
-                  <p class="catalog__collection-item-specification-price">$ 115</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Double pearl earrings</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 115</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -203,8 +215,12 @@
                     alt="Choker with gold bead" width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Choker with gold bead</p>
-                  <p class="catalog__collection-item-specification-price">$ 55</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Choker with gold bead</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 55</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -217,8 +233,12 @@
                     alt="Gold layered necklace" width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Gold layered necklace</p>
-                  <p class="catalog__collection-item-specification-price">$ 155</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Gold layered necklace</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 155</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -231,8 +251,12 @@
                     alt="Blue gemstone pendant" width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Blue gemstone pendant</p>
-                  <p class="catalog__collection-item-specification-price">$ 105</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Blue gemstone pendant</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 105</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -244,8 +268,12 @@
                     height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Boho earrings</p>
-                  <p class="catalog__collection-item-specification-price">$ 75</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Boho earrings</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 75</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -257,8 +285,12 @@
                     width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Gold bird necklace</p>
-                  <p class="catalog__collection-item-specification-price">$ 135</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Gold bird necklace</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 135</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -271,8 +303,12 @@
                     alt="Black leather choker" width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Black leather choker</p>
-                  <p class="catalog__collection-item-specification-price">$ 85</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Black leather choker</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 85</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -285,8 +321,12 @@
                     alt="Necklace with amethyst" width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Necklace with amethyst</p>
-                  <p class="catalog__collection-item-specification-price">$ 145</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Necklace with amethyst</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 145</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -298,8 +338,12 @@
                     width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Elephant earrings</p>
-                  <p class="catalog__collection-item-specification-price">$ 95</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Elephant earrings</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 95</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -312,8 +356,12 @@
                     alt="Threader necklace" width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Threader necklace</p>
-                  <p class="catalog__collection-item-specification-price">$ 115</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Threader necklace</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 115</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -326,8 +374,12 @@
                     alt="Origami crane necklace" width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Origami crane necklace</p>
-                  <p class="catalog__collection-item-specification-price">$ 105</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Origami crane necklace</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 105</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -339,8 +391,12 @@
                     width="270" height="272">
                 </picture>
                 <div class="catalog__collection-item-specification">
-                  <p class="catalog__collection-item-specification-name">Marble earrings</p>
-                  <p class="catalog__collection-item-specification-price">$ 95</p>
+                  <div class="catalog__collection-item-specification-name">
+                    <p>Marble earrings</p>
+                  </div>
+                  <div class="catalog__collection-item-specification-price">
+                    <p>$ 95</p>
+                  </div>
                 </div>
               </a>
             </div>
