--- a/source/index.html
+++ b/source/index.html
@@ -111,8 +111,12 @@
                     height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Necklace with amethyst</p>
-                  <p class="shop__slider-specification-price">$ 145</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Necklace with amethyst</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 145</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -125,8 +129,12 @@
                     srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Layered сhoker</p>
-                  <p class="shop__slider-specification-price">$ 115</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Layered сhoker</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 115</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -139,8 +147,12 @@
                     alt="Gold chain" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Gold chain</p>
-                  <p class="shop__slider-specification-price">$ 215</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Gold chain</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 215</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -153,8 +165,12 @@
                     alt="Galaxy earrings" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Galaxy earrings</p>
-                  <p class="shop__slider-specification-price">$ 95</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Galaxy earrings</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 95</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -169,8 +185,12 @@
                     height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Necklace with amethyst</p>
-                  <p class="shop__slider-specification-price">$ 145</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Necklace with amethyst</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 145</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -183,8 +203,12 @@
                     srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Layered сhoker</p>
-                  <p class="shop__slider-specification-price">$ 115</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Layered сhoker</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 115</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -197,8 +221,12 @@
                     alt="Gold chain" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Gold chain</p>
-                  <p class="shop__slider-specification-price">$ 215</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Gold chain</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 215</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -211,8 +239,12 @@
                     alt="Galaxy earrings" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Galaxy earrings</p>
-                  <p class="shop__slider-specification-price">$ 95</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Galaxy earrings</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 95</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -227,8 +259,12 @@
                     height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Necklace with amethyst</p>
-                  <p class="shop__slider-specification-price">$ 145</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Necklace with amethyst</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 145</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -241,8 +277,12 @@
                     srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Layered сhoker</p>
-                  <p class="shop__slider-specification-price">$ 115</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Layered сhoker</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 115</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -255,8 +295,12 @@
                     alt="Gold chain" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Gold chain</p>
-                  <p class="shop__slider-specification-price">$ 215</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Gold chain</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 215</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -269,8 +313,12 @@
                     alt="Galaxy earrings" width="270" height="284">
                 </picture>
                 <div class="shop__slider-specification">
-                  <p class="shop__slider-specification-name">Galaxy earrings</p>
-                  <p class="shop__slider-specification-price">$ 95</p>
+                  <div class="shop__slider-specification-name">
+                    <p>Galaxy earrings</p>
+                  </div>
+                  <div class="shop__slider-specification-price">
+                    <p>$ 95</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -295,24 +343,42 @@
           <div class="blog__itmes-left">
             <div class="blog__itmes-left-first">
               <div class="blog__itmes-content">
-                <p class="blog__items-date">September 30, 2019</p>
-                <p class="blog__items-about">How to care for<br> your jewellery</p>
-                <a class="blog__items-link" href="#">Read Article</a>
+                <div class="blog__items-date">
+                  <p>September 30, 2019</p>
+                </div>
+                <div class="blog__items-about">
+                  <p>How to care for<br> your jewellery</p>
+                </div>
+                <div class="blog__items-link">
+                  <a href="#">Read Article</a>
+                </div>
               </div>
             </div>
             <div class="blog__itmes-left-second">
               <div class="blog__itmes-content">
-                <p class="blog__items-date">September 23, 2019</p>
-                <p class="blog__items-about">Power of<br> crystals</p>
-                <a class="blog__items-link" href="#">Read Article</a>
+                <div class="blog__items-date">
+                  <p>September 23, 2019</p>
+                </div>
+                <div class="blog__items-about">
+                  <p>Power of<br> crystals</p>
+                </div>
+                <div class="blog__items-link">
+                  <a href="#">Read Article</a>
+                </div>
               </div>
             </div>
           </div>
           <div class="blog__itmes-right">
             <div class="blog__itmes-right-content">
-              <p class="blog__items-date">September 16, 2019</p>
-              <p class="blog__items-about">AW 19 trends</p>
-              <a class="blog__items-link" href="#">Read Article</a>
+              <div class="blog__items-date">
+                <p>September 16, 2019</p>
+              </div>
+              <div class="blog__items-about">
+                <p>AW 19 trends</p>
+              </div>
+              <div class="blog__items-link">
+                <a href="#">Read Article</a>
+              </div>
             </div>
           </div>
         </div>
@@ -518,10 +584,12 @@
         <h2>Log In</h2>
         <form action="https://echo.htmlacademy.ru" method="POST">
           <label for="modal-login-mail">
-            <input id="modal-login-mail" type="email" name="Email" placeholder="Your E-mail" title="Your E-mail" required>
+            <input id="modal-login-mail" type="email" name="Email" placeholder="Your E-mail" title="Your E-mail"
+              required>
           </label>
           <label for="modal-login-pass">
-            <input id="modal-login-pass" type="password" name="Password" placeholder="Password" title="Password" required>
+            <input id="modal-login-pass" type="password" name="Password" placeholder="Password" title="Password"
+              required>
           </label>
           <a href="#">Forgot your password?</a>
           <button class="modal-login__button" type="submit">Log In</button>
