--- a/source/product.html
+++ b/source/product.html
@@ -190,8 +190,12 @@
                     height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Necklace with amethyst</p>
-                  <p class="product-collection__slider-specification-price">$ 145</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Necklace with amethyst</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 145</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -204,8 +208,12 @@
                     srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Layered сhoker</p>
-                  <p class="product-collection__slider-specification-price">$ 115</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Layered сhoker</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 115</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -218,8 +226,12 @@
                     alt="Gold chain" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Gold chain</p>
-                  <p class="product-collection__slider-specification-price">$ 215</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Gold chain</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 215</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -232,8 +244,12 @@
                     alt="Galaxy earrings" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Galaxy earrings</p>
-                  <p class="product-collection__slider-specification-price">$ 95</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Galaxy earrings</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 95</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -248,8 +264,12 @@
                     height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Necklace with amethyst</p>
-                  <p class="product-collection__slider-specification-price">$ 145</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Necklace with amethyst</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 145</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -262,8 +282,12 @@
                     srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Layered сhoker</p>
-                  <p class="product-collection__slider-specification-price">$ 115</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Layered сhoker</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 115</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -276,8 +300,12 @@
                     alt="Gold chain" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Gold chain</p>
-                  <p class="product-collection__slider-specification-price">$ 215</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Gold chain</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 215</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -290,8 +318,12 @@
                     alt="Galaxy earrings" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Galaxy earrings</p>
-                  <p class="product-collection__slider-specification-price">$ 95</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Galaxy earrings</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 95</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -306,8 +338,12 @@
                     height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Necklace with amethyst</p>
-                  <p class="product-collection__slider-specification-price">$ 145</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Necklace with amethyst</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 145</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -320,8 +356,12 @@
                     srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Layered сhoker</p>
-                  <p class="product-collection__slider-specification-price">$ 115</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Layered сhoker</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 115</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -334,8 +374,12 @@
                     alt="Gold chain" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Gold chain</p>
-                  <p class="product-collection__slider-specification-price">$ 215</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Gold chain</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 215</p>
+                  </div>
                 </div>
               </a>
             </div>
@@ -348,11 +392,16 @@
                     alt="Galaxy earrings" width="270" height="284">
                 </picture>
                 <div class="product-collection__slider-specification">
-                  <p class="product-collection__slider-specification-name">Galaxy earrings</p>
-                  <p class="product-collection__slider-specification-price">$ 95</p>
+                  <div class="product-collection__slider-specification-name">
+                    <p>Galaxy earrings</p>
+                  </div>
+                  <div class="product-collection__slider-specification-price">
+                    <p>$ 95</p>
+                  </div>
                 </div>
               </a>
             </div>
+
           </div>
           <div class="product-collection__slider-pagination">
             <!-- pagination -->
