правки после теста

--- a/source/cart.html
+++ b/source/cart.html
@@ -23,7 +23,7 @@
 
           <button class="main-nav__menu-button" type="button" aria-label="close"></button>
 
-          <a class="main-nav__logo" href="index.html">
+          <a class="main-nav__logo" href="main.html">
             <svg width="66" height="66">
               <use xlink:href="img/sprite.svg#logo" />
             </svg>
