--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,7 +23,7 @@
 
           <button class="main-nav__menu-button" type="button" aria-label="close"></button>
 
-          <a class="main-nav__logo" href="index.html">
+          <a class="main-nav__logo" href="main.html">
             <svg width="66" height="66">
               <use xlink:href="img/sprite.svg#logo" />
             </svg>
@@ -504,6 +504,7 @@
   <section class="modal-login">
     <div class="modal-login__wrapper">
       <div class="modal-login__box">
+        <button class="modal-login__close" type="button" name="close"></button>
         <h2>Log In</h2>
         <form action="https://echo.htmlacademy.ru" method="POST">
           <label for="modal-login-mail">
@@ -521,7 +522,6 @@
           <p>Don’t have an account?</p>
           <a href="#">Sign up</a>
         </div>
-        <button class="modal-login__close" type="button" name="close"></button>
       </div>
     </div>
   </section>
