--- a/source/main.html
+++ b/source/main.html
@@ -389,7 +389,7 @@
         <h2>Frequently asked questions</h2>
 
         <div class="faq__items accordion">
-          <div class="accordion__item accordion__item-show accordion__no-js">
+          <div class="accordion__item accordion__item-show accordion__no-js" tabindex="0">
             <div class="accordion__item-header">
               <h3>What materials are the jewellery made of?</h3>
             </div>
@@ -399,7 +399,7 @@
             </div>
           </div>
 
-          <div class="accordion__item accordion__no-js">
+          <div class="accordion__item accordion__no-js" tabindex="0">
             <div class="accordion__item-header">
               <h3>Which countries do you deliver to?</h3>
             </div>
@@ -409,7 +409,7 @@
             </div>
           </div>
 
-          <div class="accordion__item accordion__no-js">
+          <div class="accordion__item accordion__no-js" tabindex="0">
             <div class="accordion__item-header">
               <h3>What are the payment methods?</h3>
             </div>
@@ -419,7 +419,7 @@
             </div>
           </div>
 
-          <div class="accordion__item accordion__no-js">
+          <div class="accordion__item accordion__no-js" tabindex="0">
             <div class="accordion__item-header">
               <h3>Can I return the jewellery if it didn’t fit me?</h3>
             </div>
@@ -506,7 +506,7 @@
           </div>
           <div class="footer__spam-feedback">
             <form action="https://echo.htmlacademy.ru" method="POST">
-              <input id="footer__feedback" type="email" name="feedback-mail" placeholder="Your E-mail">
+              <input id="footer__feedback" type="email" name="feedback-mail" placeholder="Your E-mail" required>
               <label for="footer__feedback"></label>
               <button type="submit">Sign Up</button>
             </form>
